@@ -1,3 +1,5 @@
+- Refactor: Updates references to deprecated MobilityRegistrationInformation methods [#qubIT-Fenix-7989]
+
 7.25.1 (30-01-2026)
 - Refactor: Remove references of TreasuryBridgeAPIFactory [#qubIT-Fenix-6552]
 - Refactor: Replace ITreasuryPlatformDependentServices#versioning* methods by static FenixEDUTreasuryPlatformDependentServices#getVersioning* [#qubIT-Fenix-7855]
